chandeliers-lus/tests/compile_fail/ui/causality/redef-var-ov.stderr
error: Attempt to redefine a, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-ov.rs:5:9
  |
5 |     var a : int;
  |         ^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-ov.rs:4:25
  |
4 |     node foo() returns (a : bool);
  |                         ^
